--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,40 @@
-body {
-    background-color: khaki;
+h1 {
+    text-align: center;
+}
+h2 {
+    color: red;
+    text-align: center;
+    font-weight: 800;
+    font-style: italic;
+    /* text-decoration: underline; */
+    text-decoration: line-through;
+    font-size: 30px;
+}
+h3 {
+    text-align: center;
+}
+.chapter {
+    color: blue;
+}
+#begin {
+    color: orange;
+    font-weight: bold;
+}
+.pink {
+    color: pink;
+}
+.text {
+    font-weight: 700;
+    text-transform: uppercase;
+}
+.box {
+    width: 300px;
+    height: 300px;
+    background-color: green;
+    padding: 20px;
+    /*border-width: 3px;
+    border-style: solid;
+    border-color: black; */
+    border: 3px solid black;
+    margin: 20px;
 }
