--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,17 +1,29 @@
+* {
+    box-sizing: border-box;
+}
+a {
+    padding: 20px;
+    margin: 20px;
+}
 h1 {
     text-align: center;
 }
 h2 {
-    color: red;
+    color: black;
     text-align: center;
     font-weight: 800;
     font-style: italic;
     /* text-decoration: underline; */
-    text-decoration: line-through;
+    /* text-decoration: line-through; */
     font-size: 30px;
 }
 h3 {
     text-align: center;
+}
+img {
+    width: 500px;
+    margin: 0 auto;
+    display: block;
 }
 .chapter {
     color: blue;
@@ -21,13 +33,16 @@ h3 {
     font-weight: bold;
 }
 .pink {
-    color: pink;
+    color: black;
 }
 .text {
     font-weight: 700;
     text-transform: uppercase;
 }
 .box {
+    /* position: relative; */
+    display: inline-block;
+    vertical-align: middle;
     width: 300px;
     height: 300px;
     background-color: green;
@@ -37,4 +52,25 @@ h3 {
     border-color: black; */
     border: 3px solid black;
     margin: 20px;
+    /* z-index: 3; */
+}
+.red {
+    background-color: red;
+    /* position: relative;
+    left: 80px; */
+    height: 170px;
+
+    /* z-index: 4; */
+}
+
+nav {
+    /* static, relative, absolute, fixed, inherit */
+    position: inherit;
+    right: 0px;
+    top: 0px;
+    /* bottom, top, right, left; */
+}
+
+.example {
+    position: relative;
 }
